src/pages/ItemDetail/subcomponents/TalentGrid/TalentGrid.scss
$dot-size:18px;
$grid-rule:1px solid rgba($color-white, 0.4);
$grid-spacing:16px;

.itemdetail-talents {
    display:flex;
    flex-direction: column;
    flex-wrap:wrap;
    gap:16px;
    //overflow-x:auto;
    max-width:100%;
    .talents-heading {
        @include itempage-section-heading;
    }
    .talents-block {
        display:flex;
        flex-wrap: wrap;
        gap:16px;
        max-width:100%;
        .talent-dotmap-container {
            display:flex;
            column-gap:calc($dot-size / 3);
            .talent-dotmap-column {
                display:flex;
                flex-direction: column;
                gap:calc($dot-size / 3) 0;
                .talent-dotmap-col-row {
                    display:block;
                    width:$dot-size;
                    height:$dot-size;
                    border-radius:100%;
                    background-color:rgba($color-box-gray, 0.6);
                }
            }
        }
        .talent-grid-container {
            display:flex;
            overflow-x:auto;
            .talent-grid-column {
                display:flex;
                flex-direction: column;
                border-left:$grid-rule;
                &:last-child {
                    border-right:$grid-rule;
                }
                .talent-grid-col-row {
                    padding-inline:$grid-spacing;
                    display:flex;
                    flex-direction: column;
                    gap:$grid-spacing;
                    &:not(:first-child){
                        border-top:$grid-rule;
                        padding-top:$grid-spacing;
                    }
                    &:not(:last-child){
                        padding-bottom:$grid-spacing;
                    }
                    &.singleton {
                        border-top:none;
                        &:not(:last-child){
                            padding-bottom:0;
                        }
                    }
                    @media screen and (max-width:768px){
                      padding-inline:calc($grid-spacing / 2);
                    }
                    p { 
                        margin:0;
                    }
                }
            }
        }
    }
    .itemdetail-ornaments{
        .itemdetail-ornaments-title{
            @include itempage-section-heading;
            border-bottom:1px solid rgba($color-white, 0.4);
            margin-block:40px 20px;
            padding-bottom:6px;
        }
        .itemdetail-ornaments-container{
            display:flex;
            flex-direction: column;
            gap:16px;
            .chroma-link-box{
                @include glass-box;
                display:flex;
                align-items: center;
                text-shadow:$text-shadow-standard;
                height:96px;
                overflow:hidden;
                .chroma-link-icon{
                    width:96px;
                    height:96px;
                    background-color: rgba($color-box-gray, 0.6);
                }
                .chroma-link-text {
                    padding-block:16px;
                    padding-inline:16px 16px;
                    h3 {
                        margin:0;
                        font-size:1.375rem;
                        text-transform: uppercase;
                        font-weight:$font-medium;
                        letter-spacing: 0.05em;
                    }
                    p {
                        margin:0;
                        font-size:1rem;
                        letter-spacing: 0.05rem;
                    }
                }
            }
        }
    }
}

